--- a/src/styles/blocks/ivent.scss
+++ b/src/styles/blocks/ivent.scss
@@ -3,6 +3,12 @@
   padding-top: 200px;
   padding-left: 55px;
   padding-right: 55px;
+
+  @include onMobile {
+    padding-top: 30px;
+    padding-left: 0;
+  padding-right: 0;
+  }
 }
 
 .page__section-ivent {
@@ -10,33 +16,75 @@
 }
 
 .ivent__image{
-background-image: url(../images/ivent1.png);
+  
 
+  @include onMobile {
+    background-image: url(../images/ivent-mob.png);
+    height: 210px;
+   margin-left: 20px;
+    margin-right: 20px;
+    background-repeat: no-repeat;
+  }
+
+  @include onDesktop {
+background-image: url(../images/ivent1.png);
 background-size: auto;
 height: 620px;
 background-repeat: no-repeat;
+  }
+
+  @include onTablet {
+    background-image: url(../images/ivent-tablet.png);
+    height: 520px;
+  }
+
+
 
 &--2 {
+
+  @include onMobile {
+    background-image: url(../images/ivent-mob2.png);
+    height: 210px;
+    margin-left: 20px;
+    margin-right: 20px;
+    background-repeat: no-repeat;
+  }
+  @include onDesktop {
   background-image: url(../images/ivent2.png);
   background-size: auto;
 height: 620px;
 background-repeat: no-repeat;
+  }
+
+  @include onTablet {
+    background-image: url(../images/ivent2-tablet.png);
+    height: 520px;
+  }
+
 }
 }
 
 .ivent__title {
+  @include onMobile {
+    font-size: 36px;
+    text-align: center;
+    margin: 0 auto;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 40px;
+  }
+
+  @include onDesktop {
   font-size: 48px;
-  font-family: Montserrat;
+  font-family: "Montserrat";
   font-weight: 700;
-
-
+  text-align: left;
 }
-
-.container {
-  
 }
 
 .ivent__desk {
+  padding-left: 20px;
+  padding-right: 20px;
 
   &-title-container {
     display: flex;
@@ -46,50 +94,99 @@ background-repeat: no-repeat;
   }
 
   &-squere {
+    @include onMobile {
+      margin-top: 0;
+      transform: translateY(10px);
+    }
       width: 10px;
       height: 10px;
       background-color: #f14a27;
       margin-top: 5px;
+      transform: translateY(15px);
   }
 
   &-time {
+    @include onMobile {
+      padding-top: 20px;
+    }
+
     display: flex;
     gap: 20px;
 
     &-date {
       color: #1A5A4C;
-      font-size: 14px;
+      font-size: 16px;
       font-weight: 700;
-      font-family: IBM Plex Sans;
+      font-family: "IBM Plex Sans";
     }
 
     &-iventName {
+      font-family: "IBM Plex Sans";
       color:#687480;
-      font-size: 14px;
-      font-weight: 500;
+      font-size: 16px;
+      font-weight: 400;
+
     }
   }
 
   &-title {
+
+    @include onMobile {
+      font-size: 28px;
+      margin-top: 15px;
+    }
     font-family: Montserrat;
     font-weight: 400;
     font-size: 36px;
     color: #0F0E08;
     margin: 0;
     margin-top: 30px;
+    text-align: left;
 
   }
 
   &-paragraf {
+
     font-family: IBM Plex Sans;
     color: #4E4E4E;
     font-weight: 400;
     line-height: 24px;
     width: 370px;
 
+    @include onMobile {
+      font-size: 16px;
+      width: 280px;
+      font-weight: 300;
+      color: #4E4E4E;
+    }
+
+  
+
+  @include onTablet {
+    width: 460px;
+    padding-bottom: 64px;
+    margin-bottom: 0;
   }
 }
+}
 .ivent__bottom {
+  
+  @include onMobile {
+    background-image: url(../images/ivent3-mob.png);
+    height: 210px;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: block;
+  }
+
+  @include onTablet {
+    background-image: url(../images/ivent3-tablet.png);
+    height: 390px;
+    
+  }
+  @include onDesktop {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -98,57 +195,139 @@ background-repeat: no-repeat;
   background-repeat: no-repeat;
   background-size: auto;
   height: 550px;
-
-
   margin-bottom: 180px;
+  }
+
+ 
 }
 
 
 .ivent__bottom {
-  background-image: url(../images/ivent3.png);
-  background-repeat: no-repeat;
-  background-size: auto;
-  height: 550px;
+  padding: 0;
 
   &-card {
-    width: 280px;
-    height: 140px;
     background-color: #fff;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
     margin: 0 auto;
     position: relative;
-    top: 150px;
    
+
+    @include onMobile {
+      transform: translateY(130px);
+      width: 280px;
+    height: 149px;
+    }
+
+    @include onTablet {
+      transform: translateY(330px);
+
+    width: 320px;
+    height: 150px;
+     }
+
+    @include onDesktop {
+    width: 570px;
+    height: 204px;
+    top: 150px;
+    transform: translateY(300px);
+    }
+
   
 
+    &-title {
+
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: 400;
+
+      @include onMobile {
+        font-size: 28px;
+        line-height: 28px;
+        margin: 0 auto;
+        text-align: center;
+      }
+    @include onDesktop {
+      font-family: "Montserrat";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 36px;
+          line-height: 36px;
+          color: #0F0E08;
+          margin: 0;
+          margin-bottom: 50px;  
+    }
+         
+    }
+    
+
     &-content {
+
+      @include onMobile {
+        padding: 0;
+        
+      }
+
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       padding: 20px 0;
+      padding-left: 100px;
+      padding-top: 45px;
+      
      
     }
   
-
       &-time {
         display: flex;
+        @include onMobile {
+         
+          flex-direction: row;
+          gap: 35px;
+          margin-top: 24px;
+        }
+        @include onDesktop {
+        display: flex;
         flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
-        gap: 30px;
+        justify-content: flex-start;
+        transform: translateX(-90px);
+        gap: 130px;
         margin-bottom: 16px;
+        }
+
+        @include theDesign {
+          padding-left: 100px;
+        }
+        
+        
+
+        &-date {
+          color: #1A5A4C;
+          font-weight: 700;
+          font-size: 14px;
+          @include onMobile {
+            white-space: nowrap;
+          }
+
+          @include onDesktop {
+          
+        }
+      }
       }
       
 
         &-time-iventName {
-          font-family: "IBM Plex Sans", sans-serif;
+
+
+          font-family: "IBM Plex Sans";
           font-style: normal;
           font-weight: 500;
-          font-size: 16px;
+          font-size: 14px;
           line-height: 100%;
           color: #687480;
-        
+          text-transform: uppercase;
+          align-items: center;
+
   }
 }
 }
