--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,12 +8,24 @@
 @import "blocks/overlay.scss";
 @import "blocks/grid.scss";
 @import "blocks/ivent.scss";
+@import "blocks/gallery.scss";
+@import "blocks/section.scss";
+@import "blocks/footer.scss";
+@import "blocks/pagination.scss";
 
-body {
- 
-  margin: 0;
-}
+
 
 html {
   margin: 0;
+  scroll-behavior: smooth;
+}
+  
+
+  .page__body {
+    margin: 0;
+
+    &--with-menu {
+      overflow: hidden;
+    }
+  
 }
