fix navigation links

--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -181,7 +181,7 @@
 .contacts__link::before {
   content: "";
   position: absolute;
-  bottom: 0px;
+  bottom: 0;
   width: 100%;
   height: 1px;
   background-color: #0f0e08;
