fix  footer vertical line position

--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -143,10 +143,13 @@
     margin-right: 64px;
   }
   .footer__wrapper {
-    gap: 35%;
+    gap: 25%;
+    @media(min-device-width: 1580px) {
+      gap: 35%;
+    }
   }
 
-  .footer__wrapper::after {
+  .footer__wrap::after {
     content: "";
     position: absolute;
     width: 1px;
