fix menu on 1280 width

--- a/src/styles/aside/aside.scss
+++ b/src/styles/aside/aside.scss
@@ -18,6 +18,7 @@
   opacity: 1;
   transform: translateY(0);
   pointer-events: all;
+ scroll-behavior: none;
 }
 
 .grid {
@@ -28,7 +29,6 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   gap: 20px;
-  align-items: center;
 }
 
 .aside__top {
@@ -61,6 +61,7 @@
 
   .aside__top {
     border-bottom: none;
+    font-size: 16px;
   }
 }
 
@@ -110,6 +111,7 @@
     width: 50%;
     padding-right: 38px;
     top: 27px;
+    gap: 20%;
   }
   .aside__bottom {
     border-left: 1px solid #fff;
@@ -146,12 +148,15 @@
     min-width: 141px;
     max-width: 165px;
   }
+  .grid__item {
+    font-size: 22px;
+  }
 }
 
-.grid__item {
-  position: relative;
-  width: fit-content;
-}
+  .grid__item {
+    position: relative;
+    width: fit-content;
+  }
 
 .aside__grid > ::before {
   border-bottom: 1px solid #fff;
