--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -68,6 +68,9 @@
   .row__footer-text {
     max-width: 135px;
   }
+  .grid__item {
+    font-size: 14px;
+  }
 }
 
 @include phone-max {
@@ -114,6 +117,9 @@
   .item__contacts {
     width: 220px;
   }
+  .grid__item {
+    font-size: 16px;
+  }
 }
 
 @include tablet-max {
@@ -124,6 +130,9 @@
 }
 
 @include desktop {
+  .grid__item {
+    font-size: 22px;
+  }
   .footer__top {
     width: 100px;
     height: 170px;
@@ -143,7 +152,10 @@
     margin-right: 64px;
   }
   .footer__wrapper {
-    gap: 25%;
+    gap: 15%;
+    @media (min-device-width: 1380px) {
+      gap: 25%;
+    }
     @media(min-device-width: 1580px) {
       gap: 35%;
     }
@@ -166,10 +178,6 @@
     width: 172px;
   }
 
-}
-
-.grid__item {
-  font-size: 14px;
 }
 
 .footer__grid > ::before {
