--- a/src/styles/header/header-bottom.scss
+++ b/src/styles/header/header-bottom.scss
@@ -55,6 +55,9 @@
   }
 }
 @include phone {
+  .tickets__row {
+    @include center;
+  }
   .tickets__link-row {
     width: 50px;
     height: 50px;
