fix menu on scrolling

--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -55,6 +55,11 @@
 .footer__grid {
   margin-top: 40px;
   margin-bottom: 80px;
+  font-weight: 300;
+}
+
+.row__footer-text {
+  font-weight: 300;
 }
 
 .copyright__subtitle {
@@ -102,7 +107,7 @@
   }
   .footer__grid {
     width: 55%;
-    margin: 64px 18% 120px;
+    margin: 64px 21% 120px;
   }
   .row__footer-text {
     max-width: 155px;
@@ -150,6 +155,9 @@
   }
   .footer__bottom {
     margin-right: 64px;
+  }
+  .footer__grid {
+    margin: 64px 12% 120px;
   }
   .footer__wrapper {
     gap: 15%;
