--- a/src/styles/page/page.scss
+++ b/src/styles/page/page.scss
@@ -7,6 +7,9 @@ html {
   scroll-behavior: smooth;
 }
 
+.lock {
+  overflow: hidden;
+}
 // body {
 //   background: $c-gray;
 //   background-color: #fff;
