--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,20 @@
-$c-gray: #eee;
+// Device sizes
+$onMobile: 320px;
+$onMobileContent: 280px;
+$onTablet: 768px;
+$onTabletContent: 690px;
+$onDesktop: 1170px;
+$onDesktopContent: 1170px;
+
+$main-background-color: #fff;
+$content-font: "IBM Plex Sans", "Helvetica", "Arial", sans-serif;
+$header-font: "Montserrat", "Helvetica", "Arial", sans-serif;
+
+// Modal Window
+$modal-main-background-color: #1a5a4c;
+$modal-secondary-background-color: rgba(24, 24, 26, 0.5);
+
+// Main menu
+$nav-font-color: #fff;
+$nav-font-color-hover: #1a5a4c;
+$nav-font-color-active: #000;
