--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -215,6 +215,10 @@ padding-right: 30px;
       background-position: center;
       background-repeat: no-repeat;
       padding-right: 22px;
+
+      &:hover {
+        scale: 1;
+      }
     }
 
     &--instagram {
