--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -5,6 +5,7 @@
   left: 0;
   right: 0;
   
+  
     transition: transform 0.3s;
     transform: translateY(-100%);
 
@@ -16,6 +17,7 @@
 .menu {
   background-color: #1A5A4C;
   height: 233px;
+  z-index: 1;
 
   @include onMobile {
     height: 420px;
@@ -40,6 +42,7 @@
   transition: all 0.3s;
   padding-top: 45px;
   padding-left: 61px;
+  z-index: 2;
   
 @include onMobile {
   width: 13px;
