--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -203,10 +203,14 @@ padding-right: 30px;
     display: flex;
     justify-content: space-between;
 
-    &:hover {
-     scale: 1;
+    @include onTablet {
+    transform: translateX(-15px);
     }
-  
+    @include onDesktop {
+      transform: translateX(-15px);
+      }
+
+
     &--facebook {
       background-image: url(../images/facebook.svg);
       display: block;
