--- a/src/styles/blocks/pagination.scss
+++ b/src/styles/blocks/pagination.scss
@@ -14,6 +14,10 @@
     @include onTablet {
       padding-top: 30px;
     }
+
+    @include onDesktop {
+      display: none;
+    }
   }
 
   &-pagination-bullet 
@@ -59,6 +63,7 @@
     &--4 {
       background-position: 80% 0;
       background-image: url(../images/foto3.png);
+
       @include onTablet {
         background-position: right;
       }
@@ -74,6 +79,3 @@
 }
 }
 
-.swiper-pagination-bullet:only-child {
-  display: flex!important;
-}
