--- a/src/styles/blocks/section.scss
+++ b/src/styles/blocks/section.scss
@@ -92,7 +92,7 @@
     
   width: 70px;
   height: 70px;
-  background-image: url(../images/arrow.png);
+  /*background-image: url(../images/arrow.png);*/
   background-position: center;
   background-repeat: no-repeat;
   background-color: #F14A27;
@@ -100,13 +100,4 @@
   }
 }
 
-/*.footer__wh-paragraf-second {
-
-  @include onMobile {
-   br {
-    display: none;
-   }
-  }
-
-}*/
 
