--- a/src/styles/aside/aside.scss
+++ b/src/styles/aside/aside.scss
@@ -40,8 +40,8 @@
 }
 
 @include phone {
-  .aside {
-    height: 50vh;
+  #menu {
+    min-height: 50vh;
   }
 
   .aside__top {
@@ -56,7 +56,9 @@
 }
 
 @include tablet {
-
+  #menu {
+    min-height: 20vh;
+  }
   .aside__top {
     border-bottom: none;
     font-size: 16px;
@@ -97,8 +99,8 @@
 }
 
 @include tablet {
-  .aside {
-    height: 30vh;
+  #menu {
+    min-height: 30vh;
   }
   .aside__container {
     display: flex;
