add header aside section

--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,90 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  text-align: center;
+  font-size: 45px;
+  line-height: 100%;
+}
+
+%h2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  text-align: center;
+  font-size: 36px;
+  line-height: 100%;
+  color: $color-link-button;
+
+  @include onTablet {
+    text-align: left;
+    font-size: 48px;
+  }
+}
+
+%h3 {
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
+  text-align: center;
+  font-size: 28px;
+  line-height: 100%;
+  color: $color-link-button;
+
+  @include onTablet {
+    font-size: 36px;
+  }
+}
+
+%type {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  color: $color-type;
+
+  @include onTablet {
+    font-size: 14px;
+  }
+}
+
+%date {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 150%;
+  color: $color-date;
+
+  @include onTablet {
+    font-size: 14px;
+  }
+}
+
+%p-card {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 150%;
+  color: $color-text-card;
+}
+
+%p {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 150%;
+}
+
+%link {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+}
+
+%after-underline {
+  content: "";
+  position: absolute;
+  bottom: -4px;
+  display: block;
+  height: 1px;
+  width: 100%;
+  background-color: $color-text-white;
 }
