--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,9 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
+@import "./blocks";
+
+* {
+  margin: 0;
+  box-sizing: border-box;
 }
