--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -141,8 +141,9 @@
     @include onTablet {
     padding-left: 0;
     padding-top: 35px;
-
     }
+
+  
 
     &--text {
       width: 200px;
@@ -165,6 +166,9 @@
         width: 140px;
         height: 45px;
       }
+      &:hover {
+        background-color: #337a6a;
+      }
 
       
     }
@@ -172,6 +176,9 @@
     &--button {
      background-color: #1A5A4C;
       justify-content: center;
+      transition: all 0.3s;
+
+
       @include onMobile {
         height: 50px;
         width: 50px;
@@ -192,6 +199,11 @@
       @include onTablet {
         height: 49px;
         width: 47px;
+      }
+
+      &:hover {
+        border-color: white;
+        scale: 1.2;
       }
     }
   }
