--- a/src/styles/blocks/section.scss
+++ b/src/styles/blocks/section.scss
@@ -78,8 +78,23 @@
     text-align:start;
     gap: 30px;
 
-  
+    &::placeholder {
+      font-family: "Montserra", sans-serif;
+      font-style: normal;
+      font-weight: 300;
+      font-size: 14px;
+      line-height: 100%;
+      color: #687480;
+    }
+    transition: scale 0.5s;
+
+    &:focus {
+      outline: none;
+      scale: 105%;
+    }
   }
+
+  
 
   &__button {
 
