fix menu display when height <=500px

--- a/src/styles/aside/aside.scss
+++ b/src/styles/aside/aside.scss
@@ -41,7 +41,7 @@
 
 @include phone {
   #menu {
-    min-height: 86vh;
+    min-height: 90vh;
   }
 
   .aside__top {
@@ -53,6 +53,13 @@
     min-width: 141px;
     max-width: 240px;
   }
+}
+
+@include phone-max-height {
+  .aside {
+    height: 100vh;
+  }
+
 }
 
 @include tablet {
