--- a/src/styles/aside/aside.scss
+++ b/src/styles/aside/aside.scss
@@ -131,6 +131,9 @@
 }
 
 @include desktop {
+  #menu {
+    min-height: 22vh;
+  }
   .aside__top {
     width: 50%;
     padding-right: 0;
@@ -143,6 +146,7 @@
     font-size: 22px;
     line-height: 22px;
     color: #fff;
+    gap: 30px;
   }
   .row__aside-text {
     min-width: 141px;
