--- a/src/styles/page/page.scss
+++ b/src/styles/page/page.scss
@@ -10,6 +10,11 @@ html {
 .lock {
   overflow: hidden;
 }
+
+.lock > :not(:nth-child(2)) {
+  opacity: 0.5;
+  background-color: #e0dfdc;
+}
 // body {
 //   background: $c-gray;
 //   background-color: #fff;
