--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,10 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "container";
+@import "page";
+@import "header";
+@import "banner";
+@import "h6-title";
+@import "menu";
+@import "nav";
