--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -27,6 +27,6 @@
     font-family: $text-font-family;
     font-size: 16px;
     font-weight: 500;
-    line-height: 100%
+    line-height: 100%;
   }
 }
