--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -2,8 +2,8 @@ $c-gray: #eee;
 $tablet-min-width: 768px;
 $desktop-min-width: 1280px;
 
-$title-font-family: 'Montserrat', sans-serif;
-$text-font-family: 'IBM Plex Sans', sans-serif;
+$title-font-family: "Montserrat", sans-serif;
+$text-font-family: "IBM Plex Sans", sans-serif;
 
 $accent-color: #1a5a4c;
 $title-color: #0f0e08;
