--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
 @import "utils";
-@import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/header.scss";
+@import "blocks/page.scss";
+@import "blocks/art-museum.scss";
+@import "blocks/block-main.scss";
+@import "blocks/menu.scss";
+@import "blocks/nav.scss";
+@import "blocks/current-events.scss";
+@import "blocks/card.scss";
+@import "blocks/gallery.scss";
+@import "blocks/slider.scss";
+@import "blocks/subscription.scss";
+@import "blocks/footer.scss";
