add all project

--- a/src/styles/block/museum.scss
+++ b/src/styles/block/museum.scss
@@ -19,7 +19,7 @@
     display: flex;
     width: 280px;
     height: 50px;
-    border: 1px solid $color-border-button;
+    border: 1px solid $color-menu;
 
     position: relative;
 
@@ -41,7 +41,7 @@
     padding: 0 80px;
     @extend %link;
     text-decoration: none;
-    color: $color-link-button;
+    color: $color-menu;
 
     @include onTablet {
       padding: 0 68px;
@@ -50,7 +50,7 @@
 
   &__arrow-button {
     @include square($size-arrow);
-    background: $color-border-button url(../images/icons/arrow_right.svg) center no-repeat;
+    background: $color-menu url(../images/icons/arrow_right.svg) center no-repeat;
 
     @include hover(background-color, $color-button-hover);
 
