--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -50,7 +50,7 @@
   font-size: 16px;
   font-weight: 700;
   line-height: 150%;
-  color: $color-date;
+  color: $color-menu;
 
   @include onTablet {
     font-size: 14px;
@@ -72,6 +72,14 @@
   line-height: 150%;
 }
 
+%placeholder {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 100%;
+  color: $color-type;
+}
+
 %link {
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 500;
@@ -87,4 +95,22 @@
   height: 1px;
   width: 100%;
   background-color: $color-text-white;
+}
+
+%after-underline-footer {
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  display: block;
+  height: 1px;
+  width: 100%;
+  background-color: $color-link-button;
+}
+
+%footer {
+  text-align: center;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 140.63%;
 }
