--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -2,12 +2,11 @@ $color-menu: #1a5a4c;
 $color-text-white: #fff;
 $color-line-menu: #ffffff80;
 $color-link-button: #0f0e08;
-$color-border-button: #1a5a4c;
 $color-button-hover:#1a5a4c80;
 $color-type: #687480;
-$color-date: #1a5a4c;
 $color-dote: #f14a27;
 $color-text-card: #4e4e4e;
+$color-dots-light: #e0e0e0;
 
 $size-icon: 24px;
 $size-arrow: 50px;
