--- a/src/styles/blocks/art-museum.scss
+++ b/src/styles/blocks/art-museum.scss
@@ -79,6 +79,9 @@
     background-repeat: no-repeat;
     background-position: center;
 
+    @include hover (transform, scale(1.1));
+    @include hover (background-color, #f14a27);
+
     @include onTablet {
       height: 70px;
       width: 70px;
