--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -35,6 +35,10 @@
     font-weight: 500;
     line-height: 16px;
     text-align: left;
+    display: block;
+    position: relative;
+
+    @include hover (transform, skewX(-10deg));
 
     @include onDesktop {
       font-size: 22px;
