--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -115,6 +115,9 @@
     background-image: url("../images/baseline-keyboard_arrow_right-24px.svg");
     background-repeat: no-repeat;
     background-position: center;
+    
+    @include hover (transform, scale(1.1));
+    @include hover (background-color, $green-color);
 
     @include onTablet {
       width: 70px;
