add task solution

--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,129 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin large() {
+  @media (min-width: 1601px) {
+    @content;
+  }
+}
+
+@mixin design() {
+  @media (max-width: 1600px) and (min-width: 1281px) {
+    @content;
+  }
+}
+
+@mixin small-desktop() {
+  @media (max-width: 1280px) and (min-width: 641px) {
+    @content;
+  }
+}
+
+@mixin tablet() {
+  @media (max-width: 640px) and (min-width: 426px) {
+    @content;
+  }
+}
+
+@mixin mobile() {
+  @media (max-width: 425px) and (min-width: 320px) {
+    @content;
+  }
+}
+
+@mixin contentPaddingInline() {
+
+  @include large {
+    width: 100%;
+    max-width: 1170px;
+    // margin-inline: auto;
+  }
+
+  @include design {
+    width: 100%;
+    max-width: 1170px;
+    // margin-inline: auto;
+  }
+
+  @include small-desktop {
+    padding-inline: 5.27vw;
+  }
+
+  @include tablet {
+    padding-inline: 6.41vw;
+  }
+
+  @include mobile {
+    padding-inline: 6.25vw;
+  }
+}
+
+@mixin contentPaddingLeft() {
+
+  @include large {
+    padding-left: 5.27vw;
+  }
+
+  @include design {
+    padding-left: 5.27vw;
+  }
+
+  @include small-desktop {
+    padding-left: 5.27vw;
+  }
+
+  @include tablet {
+    padding-left: 6.41vw;
+  }
+
+  @include mobile {
+    padding-left: 6.25vw;
+  }
+}
+
+@mixin contentPaddingRight() {
+
+  @include large {
+    padding-right: 5.27vw;
+  }
+
+  @include design {
+    padding-right: 5.27vw;
+  }
+
+  @include small-desktop {
+    padding-right: 5.27vw;
+  }
+
+  @include tablet {
+    padding-right: 6.41vw;
+  }
+
+  @include mobile {
+    padding-right: 6.25vw;
+  }
+}
+
+@mixin contentLeft() {
+
+  @include large {
+    left: 5.27vw;
+  }
+
+  @include design {
+    left: 5.27vw;
+  }
+
+  @include small-desktop {
+    left: 5.27vw;
+  }
+
+  @include tablet {
+    left: 6.41vw;
+  }
+
+  @include mobile {
+    left: 6.25vw;
+  }
+}
