add paddings to menu & fix card

--- a/src/styles/aside/aside.scss
+++ b/src/styles/aside/aside.scss
@@ -38,12 +38,10 @@
   width: 100%;
   color: #fff;
 }
-
 @include phone {
   #menu {
-    min-height: 90vh;
+    padding-bottom: 20px;
   }
-
   .aside__top {
     border-bottom: 1px solid #fff;
     gap: 10%;
@@ -57,7 +55,7 @@
 
 @include tablet {
   #menu {
-    min-height: 20vh;
+    padding-bottom: 70px;
   }
   .aside__top {
     border-bottom: none;
@@ -99,9 +97,6 @@
 }
 
 @include tablet {
-  #menu {
-    min-height: 30vh;
-  }
   .aside__container {
     display: flex;
     position: relative;
@@ -131,9 +126,6 @@
 }
 
 @include desktop {
-  #menu {
-    min-height: 22vh;
-  }
   .aside__top {
     width: 50%;
     padding-right: 0;
