--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -2,6 +2,7 @@
   color: #0f0e08;
   @include  IBM;
   font-size: 14px;
+  font-weight: 300;
 }
 
 .footer a {
@@ -56,6 +57,12 @@
   margin-top: 40px;
   margin-bottom: 80px;
   font-weight: 300;
+  font-size: 14px;
+  line-height: 14px;
+}
+
+.grid__item {
+  font-size: 14px;
 }
 
 .row__footer-text {
@@ -73,19 +80,12 @@
   .row__footer-text {
     max-width: 135px;
   }
-  .grid__item {
-    font-size: 14px;
-  }
 }
 
 @include phone-max {
   .row__item--footer {
     display: flex;
     flex-direction: column;
-  }
-  .footer__grid {
-    font-size: 14px;
-    line-height: 14px;
   }
 }
 
@@ -226,4 +226,8 @@
 .fa-facebook:hover {
   color: blue;
   transform: scale(2);
+}
+
+.items {
+  font-size: 14px;
 }
