--- a/src/styles/main/lecture.scss
+++ b/src/styles/main/lecture.scss
@@ -14,13 +14,12 @@
     margin-top: 50px;
     background-color: #fff;
     padding: 20px 0;
-    box-shadow: 0 2px 2px black;
+    box-shadow: 0 2px #1A5A4C40;
     @include transition(transform, scale(1.2));
   }
 
   &__row {
     display: flex;
-    max-width: 100%;
   }
 }
 
@@ -61,6 +60,9 @@
       top: 38em;
     }
   }
+  .lecture__rwo {
+    max-width: 80%;
+  }
 }
 
 @include phone-max {
@@ -76,4 +78,8 @@
   .lecture__top {
     margin-bottom: 20px;
   }
+}
+
+.info__title--no-pseudo {
+  pointer-events: none;
 }
