--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -73,8 +73,18 @@
   }
 }
 
-@mixin phone-max-height {
-  @media (max-device-height:600px) {
-    @content;
-  }
-}
+// @mixin phone-max-height {
+//   @media (min-device-width:320px), (max-device-height: 500px) {
+//     #menu {
+//       height: 90vh;
+//     }
+//   }
+// }
+
+// @mixin phone-height {
+//   @media(min-device-width:320px), (max-device-height: 1000px) {
+//     #menu {
+//       height: 10vh;
+//     }
+//   }
+// }
