add corrected project

--- a/src/styles/block/subscription.scss
+++ b/src/styles/block/subscription.scss
@@ -66,6 +66,7 @@
     width: 230px;
     height: 50px;
     border: none;
+    outline: 0;
     padding-left: 24px;
     @extend %placeholder;
     color: $color-link-button;
@@ -74,6 +75,11 @@
     &::placeholder {
       @extend %placeholder;
     }
+
+    &:focus {
+      border: none;
+    }
+
     @include onTablet {
       width: 374px;
       height: 70px;
