--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,6 +1,6 @@
 .header {
   @include onDesktop {
-  
+  position: relative;
   background-position: top right;
   margin-left: 55px;
   background-image: url(../images/headerfoto.png);
@@ -42,6 +42,7 @@
   }
   
   &__ivent {
+    
 
     @include onMobile {
       display: none;
@@ -52,12 +53,11 @@
     align-items: center;
     gap: 20px;
     position: absolute;
-
     left: 0;
-    bottom: 230px;
+    bottom: -9px;
     
-    top: 20%;
     transform: rotate(-90deg);
+    transform-origin: left;
 
     &-text {
       font-weight: 700;
