--- a/src/styles/blocks/ivent.scss
+++ b/src/styles/blocks/ivent.scss
@@ -170,7 +170,8 @@ background-repeat: no-repeat;
 }
 }
 .ivent__bottom {
-  
+  background-size: cover;
+
   @include onMobile {
     background-image: url(../images/ivent3-mob.png);
     height: 210px;
@@ -198,7 +199,9 @@ background-repeat: no-repeat;
   margin-bottom: 180px;
   }
 
- 
+  @include theDesign {
+    background-size: cover;
+  }
 }
 
 
