--- a/src/styles/blocks/ivent.scss
+++ b/src/styles/blocks/ivent.scss
@@ -16,8 +16,6 @@
 }
 
 .ivent__image{
-  
-
   @include onMobile {
     background-image: url(../images/ivent-mob.png);
     height: 210px;
@@ -200,6 +198,7 @@ background-repeat: no-repeat;
   }
 
   @include theDesign {
+    background-image: url(../images/ivent3.png);
     background-size: cover;
   }
 }
